# diorama

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
notebooks/: demo.ipynb
src/diorama/: __init__.py  dashboard.py  fields.py  hover.py  perspectives.py  query.py  reduction.py  viz.py
tests/: test_app.py  test_fields.py  test_hover.py  test_query.py  test_reduce.py  test_show.py  test_viz.py
